--- a/index.css
+++ b/index.css
@@ -136,3 +136,20 @@ a {
     border-radius: 100px;
     font-size: 30px;
 }
+
+.list {
+    letter-spacing: 15px;
+}
+
+.project-icons a {
+    width: 10px;
+    height: 10px;
+    border-radius: 100px;
+    font-size: 30px;
+}
+
+.project-img:hover {
+    transform: scale(1.1);
+    max-width: 100%;
+    height: auto;
+}
