--- a/index.css
+++ b/index.css
@@ -141,10 +141,9 @@ a {
     letter-spacing: 15px;
 }
 
-.project-icons a {
+.project-icons {
     width: 10px;
     height: 10px;
-    border-radius: 100px;
     font-size: 30px;
 }
 
@@ -152,4 +151,9 @@ a {
     transform: scale(1.1);
     max-width: 100%;
     height: auto;
+}
+
+.btn {
+    color: #eef3db;
+    font-weight: 500;
 }
